--- a/index.html
+++ b/index.html
@@ -44,7 +44,108 @@
           <div class="productos--buscador flex">
             <input class="buscador--text" type="text" placeholder="Buscar" />
           </div>
-          <div class="productos--card--container"></div>
+          <div class="productos--card--container">
+            <div class="card--container--destacados card--container">
+              <p class="card--container--titulo">DESTACADOS</p>
+              <div class="card--container--interno flex">
+                <div class="card--producto">
+                  <div class="card--img"></div>
+                  <p class="card--titulo"></p>
+                  <p class="card--categoria"></p>
+                  <p class="card--precio"></p>
+                </div>
+                <div class="card--producto">
+                  <div class="card--img"></div>
+                  <p class="card--titulo"></p>
+                  <p class="card--categoria"></p>
+                  <p class="card--precio"></p>
+                </div>
+                <div class="card--producto">
+                  <div class="card--img"></div>
+                  <p class="card--titulo"></p>
+                  <p class="card--categoria"></p>
+                  <p class="card--precio"></p>
+                </div>
+                <div class="card--producto">
+                  <div class="card--img"></div>
+                  <p class="card--titulo"></p>
+                  <p class="card--categoria"></p>
+                  <p class="card--precio"></p>
+                </div>
+                <div class="card--producto">
+                  <div class="card--img"></div>
+                  <p class="card--titulo"></p>
+                  <p class="card--categoria"></p>
+                  <p class="card--precio"></p>
+                </div>
+              </div>
+            </div>
+            <div class="card--container--todos card--container">
+              <p class="card--container--titulo">TODO</p>
+              <div class="card--container--interno flex">
+                <div class="card--producto">
+                  <div class="card--img"></div>
+                  <p class="card--titulo"></p>
+                  <p class="card--categoria"></p>
+                  <p class="card--precio"></p>
+                </div>
+                <div class="card--producto">
+                  <div class="card--img"></div>
+                  <p class="card--titulo"></p>
+                  <p class="card--categoria"></p>
+                  <p class="card--precio"></p>
+                </div>
+                <div class="card--producto">
+                  <div class="card--img"></div>
+                  <p class="card--titulo"></p>
+                  <p class="card--categoria"></p>
+                  <p class="card--precio"></p>
+                </div>
+                <div class="card--producto">
+                  <div class="card--img"></div>
+                  <p class="card--titulo"></p>
+                  <p class="card--categoria"></p>
+                  <p class="card--precio"></p>
+                </div>
+                <div class="card--producto">
+                  <div class="card--img"></div>
+                  <p class="card--titulo"></p>
+                  <p class="card--categoria"></p>
+                  <p class="card--precio"></p>
+                </div>
+                <div class="card--producto">
+                  <div class="card--img"></div>
+                  <p class="card--titulo"></p>
+                  <p class="card--categoria"></p>
+                  <p class="card--precio"></p>
+                </div>
+                <div class="card--producto">
+                  <div class="card--img"></div>
+                  <p class="card--titulo"></p>
+                  <p class="card--categoria"></p>
+                  <p class="card--precio"></p>
+                </div>
+                <div class="card--producto">
+                  <div class="card--img"></div>
+                  <p class="card--titulo"></p>
+                  <p class="card--categoria"></p>
+                  <p class="card--precio"></p>
+                </div>
+                <div class="card--producto">
+                  <div class="card--img"></div>
+                  <p class="card--titulo"></p>
+                  <p class="card--categoria"></p>
+                  <p class="card--precio"></p>
+                </div>
+                <div class="card--producto">
+                  <div class="card--img"></div>
+                  <p class="card--titulo"></p>
+                  <p class="card--categoria"></p>
+                  <p class="card--precio"></p>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </section>
     </main>
