--- a/index.html
+++ b/index.html
@@ -18,19 +18,27 @@
   <body>
     <header class="header--container container flex">
       <div class="header--container--div flex">
-        <div class="header--logo flex"></div>
-        <div class="header--marca flex"></div>
+        <div class="header--logo flex">
+          <div class="header--logo--1"></div>
+          <div class="header--logo--2"></div>
+        </div>
+        <div class="header--banner flex">
+          <div class="header--novedades flex">
+            <img class="novedades--img" src="./assets/img/manualidades.gif" alt="" />
+          </div>
+          <div class="header--destacados flex">Destacados o Novedades</div>
+        </div>
         <div class="header--login flex">
           <button class="btn--login">Login</button>
         </div>
       </div>
-      <div class="header--buscador"></div>
     </header>
     <main>
       <section class="main--container container flex">
         <div class="menu--container">
           <ul class="menu--ul flex">
-            <li class="menu--li">TODO</li>
+            <li class="menu--li menu--li__buscar"><input class="menu--buscar" type="text" placeholder="Buscar" /></li>
+            <li class="menu--li li__selecionado">TODO</li>
             <li class="menu--li">LETRAS 3D</li>
             <li class="menu--li">PAPERCRAFT</li>
             <li class="menu--li">BOX CLASICO</li>
@@ -41,48 +49,40 @@
           </ul>
         </div>
         <div class="productos--container">
-          <div class="productos--buscador flex">
-            <input class="buscador--text" type="text" placeholder="Buscar" />
-          </div>
           <div class="productos--card--container">
-            <div class="card--container--destacados card--container">
-              <p class="card--container--titulo">DESTACADOS</p>
-              <div class="card--container--interno flex">
-                <div class="card--producto">
-                  <div class="card--img"></div>
-                  <p class="card--titulo"></p>
-                  <p class="card--categoria"></p>
-                  <p class="card--precio"></p>
-                </div>
-                <div class="card--producto">
-                  <div class="card--img"></div>
-                  <p class="card--titulo"></p>
-                  <p class="card--categoria"></p>
-                  <p class="card--precio"></p>
-                </div>
-                <div class="card--producto">
-                  <div class="card--img"></div>
-                  <p class="card--titulo"></p>
-                  <p class="card--categoria"></p>
-                  <p class="card--precio"></p>
-                </div>
-                <div class="card--producto">
-                  <div class="card--img"></div>
-                  <p class="card--titulo"></p>
-                  <p class="card--categoria"></p>
-                  <p class="card--precio"></p>
-                </div>
-                <div class="card--producto">
-                  <div class="card--img"></div>
-                  <p class="card--titulo"></p>
-                  <p class="card--categoria"></p>
-                  <p class="card--precio"></p>
-                </div>
-              </div>
-            </div>
             <div class="card--container--todos card--container">
-              <p class="card--container--titulo">TODO</p>
+              <!-- <p class="card--container--titulo">TODO</p> -->
               <div class="card--container--interno flex">
+                <div class="card--producto">
+                  <div class="card--img"></div>
+                  <p class="card--titulo"></p>
+                  <p class="card--categoria"></p>
+                  <p class="card--precio"></p>
+                </div>
+                <div class="card--producto">
+                  <div class="card--img"></div>
+                  <p class="card--titulo"></p>
+                  <p class="card--categoria"></p>
+                  <p class="card--precio"></p>
+                </div>
+                <div class="card--producto">
+                  <div class="card--img"></div>
+                  <p class="card--titulo"></p>
+                  <p class="card--categoria"></p>
+                  <p class="card--precio"></p>
+                </div>
+                <div class="card--producto">
+                  <div class="card--img"></div>
+                  <p class="card--titulo"></p>
+                  <p class="card--categoria"></p>
+                  <p class="card--precio"></p>
+                </div>
+                <div class="card--producto">
+                  <div class="card--img"></div>
+                  <p class="card--titulo"></p>
+                  <p class="card--categoria"></p>
+                  <p class="card--precio"></p>
+                </div>
                 <div class="card--producto">
                   <div class="card--img"></div>
                   <p class="card--titulo"></p>
