nav y slider configurado

--- a/index.html
+++ b/index.html
@@ -54,8 +54,16 @@
     <main>
       <section class="slider--container flex">
         <div class="slider--container--div">
-          <div class="slider--div--img"></div>
-          <img src="" alt="" />
+          <ul class="slider--ul flex">
+            <li class="slider--li slider__li1" id="slider1"></li>
+            <li class="slider--li slider__li2" id="slider2"></li>
+            <li class="slider--li slider__li3" id="slider3"></li>
+          </ul>
+        </div>
+        <div class="slider--selector flex">
+          <a class="slider--a flex" href="#slider1">1</a>
+          <a class="slider--a flex" href="#slider2">2</a>
+          <a class="slider--a flex" href="#slider3">3</a>
         </div>
       </section>
     </main>
