vistas nav 2 mejorado

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       </div>
     </header>
     <main>
-      <section class="slider--container flex">
+      <section class="slider--container flex visible">
         <div class="slider--container--div">
           <ul class="slider--ul slider--ul__animacion flex">
             <li class="slider--li slider__li1" id="slider1"></li>
